-- created:          2015-04-02
name:                aptell
version:             0.1.0.0
synopsis:            Library for migrating parse trees (e.g. created by ANTLR) to Haskell
homepage:            https://github.com/kongra/aptell
license:             BSD3
license-file:        LICENSE
author:              Konrad Grzanek
maintainer:          kongra@gmail.com
copyright:           (c) Konrad Grzanek 2015
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:       -O2 -W -Wall -funbox-strict-fields
  if impl(ghc >= 6.8)
    ghc-options:     -fwarn-tabs

  exposed-modules:   Aptell.Data

  other-extensions:  Safe
  build-depends:     base >=4.7 && <4.8
                   , bytestring >= 0.10.4.0
                   , binary >= 0.7.1.0
                   , unordered-containers >= 0.2.5.0
                   , hashable >= 1.2.2.0
                   , text >= 1.2.0.4
                   , safe >= 0.3.8
                   -- , kask-base >= 0.1.0
                   -- , treeprint >= 0.1.0

  hs-source-dirs:    haskell
  default-language:  Haskell2010