name:                  aptell
version:               0.1.0.0
synopsis:              Initial project template from stack
description:           Please see README.md
homepage:              https://github.com/kongra/aptell#readme
license:               BSD3
license-file:          LICENSE
author:                Konrad Grzanek
maintainer:            kongra@gmail.com
copyright:             (c) 2016-present Konrad Grzanek
category:              Research
build-type:            Simple
cabal-version:         >= 1.10

library
  ghc-options:         -O2 -W -Wall
                       -fllvm -optlo-O3
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -funbox-strict-fields
                       -fwarn-tabs

  hs-source-dirs:      src/hs/lib

  exposed-modules:     Aptell.Aptl
                     , Aptell.Aptl.Java
                     , Aptell.Aptl.Print

  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , containers
                     , kask
                     , mtl
                     , text
                     , unordered-containers

  default-language:    Haskell2010

executable aptell-exe
  hs-source-dirs:      src/hs/app
  main-is:             Main.hs
  other-modules:
  ghc-options:         -O2 -W -Wall
                       -fllvm -optlo-O3
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -funbox-strict-fields
                       -fwarn-tabs
                       -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base
                     , aptell
  default-language:    Haskell2010

test-suite aptell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/hs/test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -O0 -W -Wall
                       -fllvm
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -funbox-strict-fields
                       -fwarn-tabs
                       -threaded -rtsopts -with-rtsopts=-N

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kongra/aptell
